2009-04-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomMethod.cs: Fixed anonymous
	  types.

2009-04-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomType.cs:
	* MonoDevelop.Projects.Dom/DomMethod.cs:
	* MonoDevelop.Projects.Dom/ExtensionMethod.cs:
	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs: Fixed failing
	  unit test.

2009-04-01  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/IMethod.cs:
	* MonoDevelop.Projects.Dom/DomType.cs:
	* MonoDevelop.Projects.Dom/DomMethod.cs:
	* MonoDevelop.Projects.Dom/ExtensionMethod.cs: fixed "Bug
	  491016 - No intellisense for lambdas inside linq query".

2009-04-01  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomType.cs: fixed "Bug 487226 - No
	  intellisense in LINQ queries".

2009-03-31  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomType.cs:
	* MonoDevelop.Projects.Dom/DomMethod.cs:
	* MonoDevelop.Projects.Dom/ExtensionMethod.cs: Worked on C#3
	  lambda resolving.

2009-03-30  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/FoldingRegion.cs: Track api
	  changes.

2009-03-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Output/AmbienceService.cs:
	* MonoDevelop.Projects.Dom.MemoryDatabase/MemoryDatabase.cs:
	* MonoDevelop.Projects.Dom.MemoryDatabase/MemoryProjectDom.cs:
	* MonoDevelop.Projects.Dom.MemoryDatabase/ProjectMemoryProjectDom.cs:
	  Worked on memory project dom.

	* Makefile.am:
	* MonoDevelop.Projects.csproj: 

2009-03-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/Error.cs:
	* MonoDevelop.Projects.Dom/TypeParameter.cs:
	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs:
	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs:
	* MonoDevelop.Projects.Dom.MemoryDatabase/NamespaceEntry.cs:
	* MonoDevelop.Projects.Dom.MemoryDatabase/MemoryProjectDom.cs:
	* MonoDevelop.Projects.Dom.Serialization/DatabaseProjectDom.cs:
	  Worked on project dom & unit tests.
