@@ -1,5 +1,9 @@
 2009-04-02  Mike Krüger  <mkrueger@novell.com>
 
+	* MonoDevelop.Projects.Dom/AbstractMember.cs: Fixed unit test.
+
+2009-04-02  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.Projects.Dom/DomMethod.cs: Fixed anonymous
 	  types.
 
